# Agent_platform

./: .gitignore  CLAUDE.md  PROJECT.md  init.md  pyproject.toml
docs/architecture/: 00-overview.md  01-data-models.md  02-foundation.md  03-planning.md  04-llm-gateway.md  05-memory.md  06-mcp-tools.md  07-guardrails.md  08-event-bus.md  09-governance.md  10-api-contracts.md  api-contracts.md  data-models.md  event-bus.md  foundation.md  governance.md  guardrails.md  llm-gateway.md  mcp-tools.md  planning.md
docs/architecture/governance/: design.md
docs/architecture/guardrails/: design.md
docs/integration_service_control/: 03-project-moi-su-dung-infra.md
docs/research/: 01-problem-analysis.md  02-market-research.md  03-architecture-patterns.md
docs/scope/: 01-project-scope.md  02-user-personas.md  03-requirements.md  04-developer-experience.md
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py
src/: main.py
src/api/: __init__.py  app.py  middleware.py  responses.py  routes.py
src/core/: config.py  enums.py  errors.py  events.py  models.py  protocols.py  security.py  tracing.py
src/engine/: __init__.py  budget.py  checkpoint.py  context.py  event_emitter.py  executor.py  react.py
src/events/: __init__.py  bus.py
src/governance/: __init__.py  audit_sink.py  cost_tracker.py  data_classifier.py  service.py
src/guardrails/: __init__.py  engine.py  models.py
src/memory/: __init__.py  conversation_buffer.py  manager.py  summarizer.py  working.py
src/store/redis/: client.py  (+7 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_api_e2e.py  test_infra_connectivity.py  test_repo_e2e.py
tests/unit/: test_api.py  test_budget_controller.py  test_checkpoint_manager.py  test_circuit_breaker.py  test_config.py  test_context_assembler.py  test_enums.py  test_event_bus.py  test_event_emitter.py  test_executor.py  test_governance.py  test_guardrails.py  test_invocation_handler.py  test_llm_anthropic.py  test_llm_openai_compat.py  test_llm_pricing.py  test_llm_router.py  test_mcp_models.py  test_memory.py  test_models.py  test_react_engine.py  test_redis_stores.py  test_result_processor.py  test_schema_converter.py  test_security.py  test_tool_manager.py
(+30 files in other folders)
